# EmbodiScope

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  run.py
data/: dataset_catalog.json  demo_lerobot.parquet  demo_maniskill_collision.h5  demo_maniskill_collision.json  demo_pick_place.csv
data/demo_ros2_mcap/: demo_ros2_mcap.mcap  metadata.yaml
docs/: EmbodiScope_Assessment_Deck_v2.3.pptx  api.md  assessment_qa.md  assessment_submission.md  demo_script.md  embodied-evaluation.md  recovery-lab.md  simulation-scenarios.md  task-reasoning.md  technical_report.md
docs/assets/: simulation-pixel-check.json  spatial-pixel-check.json  (+1 more)
embodiscope/: __init__.py  analysis.py  batch_repair.py  benchmark.py  cli.py  dataset_library.py  embodied.py  profiles.py  recovery_benchmark.py  recovery_lab.py  repair.py  repair_benchmark.py  report.py  rerun_export.py  server.py  simulation.py  task_reasoning.py
scripts/: assessment_preflight.py  assessment_start.ps1  build_assessment_video.py  fetch_open_datasets.py  generate_demo_data.py  generate_maniskill_demo.py  generate_ros2_demo.py  run_batch_repair.py  run_benchmark.py  run_maniskill_sim.py  run_repair_benchmark.py  visual_check.mjs
static/: app.js  index.html  style.css
tests/: test_adapters.py  test_analysis.py  test_batch_repair.py  test_benchmark.py  test_dataset_library.py  test_embodied.py  test_recovery_benchmark.py  test_recovery_lab.py  test_repair.py  test_repair_benchmark.py  test_simulation.py  test_task_reasoning.py
(+83 files in other folders)
